Update SetvcCmd.java